--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
     "doctrine/orm": "~2.2,>=2.2.3,<2.5",
     "doctrine/dbal": "<2.5",
     "doctrine/doctrine-bundle": "~1.2",
-    "stof/doctrine-extensions-bundle": "~1.1"
+    "stof/doctrine-extensions-bundle": "~1.1",
+    "phpoffice/phpexcel": "^1.8"
   },
   "require-dev": {
     "phpunit/phpunit": "4.6.*",
